k8s_v1/backup-working/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: users
    version: stable
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
