k8s_v1/backup-working/http-proxy.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: user-service-proxy
spec:
  virtualhost:
    fqdn: s1
  routes:
    - conditions:
        - prefix: / 
      services:
        - name: user-service
          port: 80
